# tests_llvm_emul

tests-llvm-emul/: 1611224159_random.txt  CMakeLists.txt  llvmir_emul_tests.cpp  llvmir_emul_tests.h  llvmir_tests.h  wget_opt.bc  x64_gzip_1_10_gcc75_O0_3.6.2.txt  x64_gzip_1_10_gcc_O2.txt
tests-llvm-emul/lib/: exceptions.h  llvmir-emul.h
tests-llvm-emul/utils/: conversion.cpp  convesion.h  llvmir-emul.h  string.cpp  string.h
